; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/SPL/src/extr_misc.c_SysTick_CLKSourceConfig.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/SPL/src/extr_misc.c_SysTick_CLKSourceConfig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@SysTick_CLKSource_HCLK = common dso_local global i32 0, align 4
@SysTick = common dso_local global %struct.TYPE_2__* null, align 8
@SysTick_CLKSource_HCLK_Div8 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SysTick_CLKSourceConfig(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @IS_SYSTICK_CLK_SOURCE(i32 %3)
  %5 = call i32 @assert_param(i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @SysTick_CLKSource_HCLK, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load i32, i32* @SysTick_CLKSource_HCLK, align 4
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SysTick, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = or i32 %13, %10
  store i32 %14, i32* %12, align 4
  br label %21

15:                                               ; preds = %1
  %16 = load i32, i32* @SysTick_CLKSource_HCLK_Div8, align 4
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SysTick, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = and i32 %19, %16
  store i32 %20, i32* %18, align 4
  br label %21

21:                                               ; preds = %15, %9
  ret void
}

declare dso_local i32 @assert_param(i32) #1

declare dso_local i32 @IS_SYSTICK_CLK_SOURCE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
